vlib/v/checker/tests/match_type_node_with_non_sum_type_err.out
vlib/v/checker/tests/match_type_node_with_non_sum_type_err.vv:5:3: error: cannot match i64 with non sum type
    3 |
    4 |     match b {
    5 |         i64 { println('i64') }
      |         ~~~
    6 |         100 { println(100) }
    7 |         else {}
